--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.9",
+    "file-saver": "^2.0.5",
+    "nprogress": "^0.2.0",
     "vue": "^2.6.14",
     "vue-router": "^3.5.4",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "xlsx": "^0.18.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -24,6 +27,7 @@
     "babel-plugin-component": "^1.1.1",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "script-loader": "^0.7.2",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
