--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "nprogress": "^0.2.0",
     "vue": "^2.6.14",
     "vue-router": "^3.5.4",
+    "vue-simple-uploader": "^0.7.6",
     "vuex": "^3.6.2",
     "xlsx": "^0.18.4"
   },
